# hit_worker

./: .gitignore  CMakeLists.txt  Makefile.windows  README_WINDOWS.md  build.sh  build_cross_compile.sh  build_static.sh  build_windows.bat  run.sh  toolchain-mingw.cmake
doc/: Hit_Woker_Plan_Developpement.md  Hit_Worker_GDD.md  README.md  ajout_nouvel_etat.md  guide_hitwoker_tiled.md  schema_compression_2d.md
doc/TODO/: TODO_Phase3.md  TODO_Phase3b.md
doc/guide/: ajout_nouveau_level.md  ajout_nouvelle_arme.md  hitwoker_tiled.md  mode_debug.md
doc/plans/: feature-dynamic-map-dimensions-plan.md  feature-item-drop-system-plan.md
doc/plans/boss-transition/: diagram.md  plans.md  spec.md
doc/plans/dynamic-level-loading/: diagram.md  plan.md  spec.md
doc/plans/hitwoker-tiled-leveldata/: diagram.md  plan.md  spec.md
include/animation/: AnimationController.hpp
include/combat/: GrenadeWeapon.hpp  Hitbox.hpp  MeleeWeapon.hpp  ProjectileWeapon.hpp  Weapon.hpp
include/core/: AbstractState.hpp  Game.hpp  StateManager.hpp
include/entity/: DummyEnemy.hpp  Enemy.hpp  Entity.hpp  Fioneur.hpp  Item.hpp  Player.hpp  Projectile.hpp  TurretGode.hpp
include/level/: Camera.hpp  Level.hpp  LevelData.hpp  LevelManager.hpp  level1Data.h  level2Data.h
include/state/: BossTransitionState.hpp  DeathState.hpp  GameOverState.hpp  GamePlayState.hpp  MenuState.hpp  PauseState.hpp
include/ui/: HUD.hpp
include/utils/: InputState.hpp  constant.h
src/: main.cpp
src/animation/: AnimationController.cpp
src/combat/: GrenadeWeapon.cpp  Hitbox.cpp  MeleeWeapon.cpp  ProjectileWeapon.cpp
src/core/: Game.cpp  StateManager.cpp
src/entity/: DummyEnemy.cpp  Enemy.cpp  Entity.cpp  Fioneur.cpp  Item.cpp  Player.cpp  Projectile.cpp  TurretGode.cpp
src/level/: Camera.cpp  Level.cpp  LevelData.cpp  LevelManager.cpp
src/state/: BossTransitionState.cpp  DeathState.cpp  GameOverState.cpp  GamePlayState.cpp  MenuState.cpp  PauseState.cpp
src/ui/: HUD.cpp
